Update to the latest module parent, add Jenkinsfile